updated hamburger issues on mobile device

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -256,7 +256,7 @@
 /* Very Small Phones (380px and below) */
 @media screen and (max-width: 380px) {
   #profile {
-    padding-top: 70px;
+    padding-top: 4rem;
     overflow: visible;
   }
 
